--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,7 @@
 <script src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.min.js"></script>
 <script>window._ || document.write('<script src="js/vendor/lodash-2.4.1.min.js"><\/script>')</script>
 
-<script src="//cdnjs.cloudflare.com/ajax/libs/backbone.js/1.1.2/backbone-min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/backbone.js/1.2.3/backbone.js"></script>
 <script>window.Backbone || document.write('<script src="js/vendor/backbone-1.1.2.min.js"><\/script>')</script>
 production -->
 
